[project]
name = "accelcluster-visualizations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "glasbey>=0.3.0",
    "h5py>=3.14.0",
    "ipykernel>=6.31.0",
    "ipynb>=0.5.1",
    "kaleido>=1.3.0",
    "numpy>=2.0.2",
    "opentsne>=1.0.4",
    "pandas>=2.3.3",
    "pip>=26.0.1",
    "plotly>=6.8.0",
    "pycirclize>=1.9.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
